# WebCrawling2

./: pyproject.toml  readme.md
book_crawler/: books.jsonlines  requests.txt
book_crawler/book_crawler/: fastapi_service_books.py  items.py  pipelines.py  settings.py
book_crawler/book_crawler/spiders/: chitai_gorod_spider.py
